# mirage

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  demo.tape
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  ci.yml  release.yml
assets/: Mirage.icns
mockup/: Mirage_GUI.html  Mirage_shell.html  RatioUp_shell.html
scripts/: build_app.sh  make_app.sh  set_version.sh
src/: bencode.rs  config.rs  control.rs  directory.rs  engine.rs  json_output.rs  main.rs  state.rs  torrent.rs  transmission.rs  utils.rs  watcher.rs
src/announcer/: scheduler.rs  tracker.rs  udp.rs
src/gui/: app.rs  mod.rs  term.rs  term_app.rs  theme.rs  views.rs
src/ui/: draw.rs  events.rs  history.rs  keys.rs  mod.rs  notify.rs  overlay.rs  render.rs  snapshot.rs  view.rs
www/: index.html
