[package]
name = "RatioUp"
authors = ["mangetoncompost"]
version = "1.0.0"
edition = "2024"
keywords = ["torrent", "ratio", "upload", "cli"]
description = "CLI tool to fake your torrent upload in order to increase your ratio."

# Native macOS .app bundle (cargo bundle --release). Double-clicking the bundle
# auto-detects it's running from Contents/MacOS/ and opens the native GUI.
[package.metadata.bundle]
name = "RatioUp"
identifier = "coop.assembleurs.ratioup"
icon = ["assets/RatioUp.icns"]
version = "1.0.0"
short_description = "Fake your torrent upload to grow your ratio."
category = "public.app-category.utilities"

[dependencies]
fastrand = "2.3"
chrono = { version = "0.4.44", features = ["serde"] }
tokio = { version = "1.50", features = ["full"] }
futures-util = { version = "0.3.32", default-features = false, features = ["std"] }
once_cell = "1.21"
sanitize-filename = "0.6"
url = "2.5.6"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "gzip", "charset", "http2"] }
fake-torrent-client = "0.9.10"

xdg = "3.0"
toml = "0.9"

# logging
tracing = "0.1.41"
tracing-subscriber = "0.3"

# bittorrent parsing
sha1_smol = "1.0"

# file watching
notify = "8.0"

# live terminal UI (super-shell dashboard)
crossterm = "0.28"

# read the installed Transmission version (Info.plist, binary or XML) for client="auto"
plist = "1"

# lock-free swappable config/snapshot shared between the engine and the native GUI
arc-swap = "1.9"

# native macOS GUI (egui/eframe) — used only by the --gui entry path.
# The window is a REAL embedded terminal (egui_term = alacritty_terminal + egui)
# that PTY-spawns this same binary in `--tty` mode, so the window is the shell
# dashboard byte-for-byte. Pinned to a specific rev (egui_term is 0.1/git-only).
eframe = { version = "0.34", default-features = false, features = ["wgpu", "default_fonts"] }
egui = "0.34"
egui_term = { git = "https://github.com/Harzu/egui_term", rev = "df910f2be512e67a8d2c4c21945f87718630041a" }
