[package]
name = "mirage-tui"
authors = ["mangetoncompost"]
version = "1.3.2"
edition = "2024"
rust-version = "1.87"
license = "MIT"
description = "CLI tool to fake your torrent upload in order to increase your ratio."
repository = "https://github.com/mangetoncompost/mirage"
homepage = "https://github.com/mangetoncompost/mirage"
readme = "README.md"
keywords = ["torrent", "ratio", "upload", "cli", "tui"]
categories = ["command-line-utilities"]
exclude = [
    "assets/",
    "www/",
    "scripts/",
    "demo.tape",
    "torrents/",
    "*.torrent",
    "Mirage.app/",
    ".github/",
    ".vscode/",
]

# Published on crates.io as `mirage-tui` (the name `mirage` was taken).
# The installed binary stays `mirage`: cargo install mirage-tui, then run `mirage`.

# macOS launcher: scripts/make_app.sh wraps the release binary in a Mirage.app
# that opens the live dashboard in Terminal.app. No GUI deps, no cargo bundle.

[[bin]]
name = "mirage"
path = "src/main.rs"

[dependencies]
fastrand = "2.3"
chrono = { version = "0.4.44", features = ["serde"] }
tokio = { version = "1.50", features = ["full"] }
futures-util = { version = "0.3.32", default-features = false, features = ["std"] }
once_cell = "1.21"
sanitize-filename = "0.6"
url = "2.5.6"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "gzip", "charset", "http2"] }
fake-torrent-client = "0.9.10"

xdg = "3.0"
toml = "1.1"

# logging
tracing = "0.1.41"
tracing-subscriber = "0.3"

# bittorrent parsing
sha1_smol = "1.0"

# file watching
notify = "8.0"

# live terminal UI (super-shell dashboard)
crossterm = "0.28"

# read the installed Transmission version (Info.plist, binary or XML) for client="auto"
plist = "1"

# lock-free swappable config/snapshot shared between the engine and the native GUI
arc-swap = "1.9"

